<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".FirstPages.RegFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reg" />

    <EditText
        android:id="@+id/password_confirmed_reg"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:hint="@string/confirmedPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />

    <TextView
        android:id="@+id/passwordRule"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/passwordRule"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_confirmed_reg"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/goodWhite"
        android:textSize="12sp"
        android:text="@string/regWithEmail"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRule" />

    <TextView
        android:id="@+id/haveAcc"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/haveAcc"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationEmail"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/goodWhite"
        android:text="@string/Enter"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/haveAcc" />

</androidx.constraintlayout.widget.ConstraintLayout>