<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackForBackground"
    tools:context=".FirstPages.AuthFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_auth"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password_auth"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_auth" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/goodWhite"
        android:text="@string/Enter"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_auth" />

    <TextView
        android:id="@+id/noAcc"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/noAcc"
        android:textColor="@color/goodWhite"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAuth"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/regAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/goodWhite"
        android:text="@string/registration"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noAcc" />

</androidx.constraintlayout.widget.ConstraintLayout>